syntax = "proto3";

package com.road.yishi.proto.box;

message BoxMsg {
  int32 time = 1;
  int32 grade = 2;
  bool operate = 3;
  int32 timerun = 4;
}
