syntax = "proto3";

package com.road.yishi.proto.building;

message TransInfoMsg {
  int32 currentEnergy = 1;
  int32 remainTime = 2;
}
